syntax = "proto3";

package types;

option go_package = "github.com/singerdmx/BulletJournal/protobuf/daemon/grpc/types";
option java_multiple_files = true;
option java_package = "com.bulletjournal.protobuf.daemon.grpc.types";
option java_outer_classname = "SubscribeNotificationProto";

message SubscribeNotification {
  string serviceName = 1;
}

message StreamMessage {
  oneof body {
    SubscribeRenewGoogleCalendarWatchMsg renewGoogleCalendarWatchMsg = 1;
  }
}

message SubscribeRenewGoogleCalendarWatchMsg {
  string googleCalendarProjectId = 1;
}